# libws

./: CMakeLists.txt  README.md  cert.pem  index.html  key.pem
doc/: testing.txt  ws_flow.dia
src/simple/: main.c
src/tests/: simple_httpd.c  socket.c  stent_httpd.c
src/ws/: Event.h  HttpHeader.c  HttpHeader.h  SslSocket.c  TcpSocket.c  TcpSocket.h  Util.h  WebSocket.c  WebSocket.h  base64.c  base64.h  handshake.c  stent.h  ws.c  ws.h
src/wsd/: main.c
www/: alert.html  echo.html  index.html
www/js/: Camera.js  CommandStream.js  Component.js  Connection.js  Core.js  Input.js  Mat4.js  Mesh.js  Model.js  Resource.js  Resources.js  Shader.js  Texture.js  TriangleRenderer.js  Vec2.js  Vec3.js  Vec4.js  Window.js  main.js  util.js
